[package]
name = "og-248-no"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
http = "0.2.9"
quick_cache = "0.5.1"
reqwest = "0.12.3"
serde = { version = "1", features = ["derive"] }
tl = "0.7.8"
tokio = { version = "1", features = ["full"] }
